<resources>
    <string name="app_name">Fit Pro</string>
    <string name="moveExercise">Move item from one view to another</string>

    <!--Add New Exercise Custom Dialog-->
    <string name="add_new_exercise">Add New Exercise</string>
    <string name="edit_exercise">Edit Exercise</string>
    <string name="hint_exercise_name">Name</string>
    <string name="hint_number_of_sets">Number of Sets</string>
    <string name="hint_reps_per_set">Reps per Set</string>
    <string name="hint_set_estimate_time">Set Estimate Time (in seconds)</string>
    <string name="hint_description">Description</string>

    <!--Add Exercise To Workout Custom Dialog-->
    <string name="select_day">Select the Day</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>

    <!--Add New Workout Routine Custom Dialog-->
    <string name="add_new_workout_routine">Add New Routine</string>
    <string name="edit_workout_routine">Edit Workout Routine</string>
    <string name="hint_workout_routine_name">Routine Name</string>

    <!--Add New Meal Category Custom Dialog-->
    <string name="add_new_meal_category">Add New Meal Category</string>
    <string name="edit_meal_category">Edit Meal Category</string>
    <string name="hint_meal_category_name">Meal Category</string>

    <!--Add New Meal Custom Dialog-->
    <string name="add_new_meal">Add New Meal</string>
    <string name="edit_meal">Edit Meal</string>
    <string name="hint_meal_name">Name</string>
    <string name="hint_proteins">Proteins</string>
    <string name="hint_carbs">Carbs</string>
    <string name="hint_fats">Fats</string>
    <string name="hint_calories">Calories</string>
    <string name="hint_ingredients">Ingredients</string>

    <!--Buttons-->
    <string name="add">Add</string>
    <string name="next">Next</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="new_meal">New Meal</string>
    <string name="ok">OK</string>

    <string name="remove_item">Remove Item</string>
    <string name="move_item">Move item from one view to another</string>

    <!--LOGIN & REGISTRATION -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hint_name">Name</string>
    <string name="hint_email">Email</string>
    <string name="hint_phone">Phone Number</string>
    <string name="hint_password">Password</string>
    <string name="hint_rePassword">Confirm Password</string>

    <string name="err_empty_name">Name is blank</string>
    <string name="err_empty_email">Email is blank</string>
    <string name="err_empty_phone">Phone is blank</string>
    <string name="err_empty_password">Password is blank</string>
    <string name="err_empty_rePassword">Re-Password is blank</string>
    <string name="title_activity_nav_drawer">NavDrawerActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="text_login">Login</string>
    <string name="text_no_account">No Account Yet?\u00A0</string>
    <string name="text_register_now">Register Now.</string>
    <string name="text_register">Register</string>
    <string name="text_forgot_pass">Forgot Password?</string>
    <string name="text_reset">Reset</string>
    <string name="text_logout">Logout</string>

    <string name="title_activity_home">Home</string>
    <string name="title_activity_edit_profile">Edit Profiley</string>

    <string name="profile_height">Height : </string>
    <string name="profile_weight">Weight :</string>
    <string name="profile_exp">Experience : </string>
    <string name="profile_body">Body Type : </string>
    <string name="profile_goal">Goal : </string>
    <string name="profile_noti">Notification : </string>

    <!--CONTACT-->
    <string name="add_contact">Save Contact</string>
    <string name="select_contact">Select Contact</string>
    <string name="create_group">Create Group</string>

    <!--CHAT-->
    <string name="add_new_contact">Add Contact</string>
    <string name="create_group_chat">Create Group Chat</string>
    <string name="edit_user_detail">Edit Contact Detail</string>
    <string name="hint_detail">New Detail</string>
    <string name="change">Change</string>
    <string name="remove">Remove</string>

    <string name="action_settings">Settings</string>
    <string name="email">Email Id</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="login_register">New user, tap here to register !</string>
    <string name="register">Register</string>

    <string name="user_successfully_added">User successfully added!</string>
    <string name="user_unable_to_add">Unable to add user!</string>
    <string name="adding_user_to_db">Adding user to database.</string>
    <string name="loading">Loading</string>
    <string name="please_wait">Please wait...</string>
    <string name="type_a_message">Type a message</string>

</resources>
